# chessclub

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  app.py  pyproject.toml
.claude/: settings.local.json
docs/: cache.md  features.md  roadmap.md  usage.md
src/chessclub/auth/: __init__.py  credentials.py  interfaces.py
src/chessclub/client/: chesscom.py
src/chessclub/core/: base.py  exceptions.py  interfaces.py  models.py
src/chessclub/providers/chesscom/: __init__.py  auth.py  cache.py  chesscom.py  client.py
src/chessclub/providers/lichess/: __init__.py  auth.py  client.py
src/chessclub/services/: __init__.py  attendance_service.py  club_service.py  leaderboard_service.py  matchup_service.py  rating_history_service.py  records_service.py
src/chessclub_cli/: main.py
tests/: manual_test.py  test_cli.py  test_models.py
tools/chessclub-cookie-helper/: README.md  manifest.json  popup.html  popup.js
