[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chessclub"
version = "0.1.0"
description = "Biblioteca modular para APIs de xadrez"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Carlos Mello Jr", email = "cmellojr@gmail.com" }
]

dependencies = [
    "requests>=2.31",
    "typer[all]>=0.12"
]

[project.scripts]
chessclub = "chessclub_cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]