[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chessclub"
version = "0.2.0"
description = "Modular library for chess platform APIs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

authors = [
    { name = "Carlos Mello Jr", email = "cmellojr@gmail.com" }
]

dependencies = [
    "requests>=2.31",
    "typer[all]>=0.12"
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.15"]

[project.scripts]
chessclub = "chessclub_cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "B008",   # typer.Option() in defaults — required by Typer
    "B904",   # raise-without-from-inside-except — fix incrementally
    "E501",   # line-too-long — enforced by ruff format instead
    "SIM102", # collapsible-if — readability preference
]

[tool.ruff.lint.isort]
known-first-party = ["chessclub", "chessclub_cli"]